--- a/setup_info.ini
+++ b/setup_info.ini
@@ -68,3 +68,11 @@ chmod +x mc
 ./mc anonymous info myminio/product-images
 # Убедитесь, что теперь показывает ваши файлы
 ./mc ls myminio/product-images
+# Удалить конкретный файл
+./mc rm myminio/product-images/bot.png
+
+# Включить vm.overcommit_memory для Redis
+# Создадим конфиг для sysctl
+echo "vm.overcommit_memory = 1" | sudo tee /etc/sysctl.d/99-redis-overcommit.conf
+# Применим сразу, без перезагрузки
+sudo sysctl --system
