99 add sorting products by price and date added

--- a/setup_info.ini
+++ b/setup_info.ini
@@ -30,6 +30,7 @@ sudo apt install certbot -y
 sudo certbot certonly --standalone -d yanda.twc1.net
 sudo certbot renew --force-renewal
 
+cd /root/app/yanda_shop
 chmod +x deploy.sh
 ./deploy.sh
 
