--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,5 +4,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 ENV PYTHONUNBUFFERED=1
-CMD ["gunicorn", "app:app", "-b", "0.0.0.0:8000", "--workers", "3"]
-# CMD ["python", "app.py"]
+CMD ["gunicorn", "app:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
