--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.11
 WORKDIR /bot
 COPY requirements.txt .
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
+ENV PYTHONUNBUFFERED=1
 CMD ["python", "bot.py"]
