103 add pinia in frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,15 @@
     "serve": "node server.js"
   },
   "dependencies": {
-    "vue": "^3.3.0",
-    "vue-router": "^4.4.0",
+    "axios": "^1.6.0",
+    "pinia": "^3.0.2",
     "serve": "^14.2.0",
-    "axios": "^1.6.0"
+    "vue": "^3.3.0",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
-    "vite": "^4.4.11",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "vite": "^4.4.11"
   }
 }
