--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
     "pinia": "^3.0.2",
     "serve": "^14.2.0",
     "vue": "^3.3.0",
+    "vue-chartjs": "^5.0.1",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
