125 fix bug in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,8 @@ http {
 
     # 2) Основной HTTPS-сервер
     server {
-        listen       443 ssl http2;
+        listen 443 ssl;
+        http2;
         server_name  shop.yanda.twc1.net;
 
         ssl_certificate     /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
