--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,17 +6,16 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    # 1) Редирект всего HTTP-трафика на HTTPS
+    # Редирект HTTP → HTTPS
     server {
         listen       80;
         server_name  shop.yanda.twc1.net;
         return       301 https://$host$request_uri;
     }
 
-    # 2) Основной HTTPS-сервер
+    # HTTPS-сервер с поддержкой HTTP/2
     server {
-        listen 443 ssl;
-        http2;
+        listen 443 ssl http2;
         server_name  shop.yanda.twc1.net;
 
         ssl_certificate     /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
