--- a/.env
+++ b/.env
@@ -17,6 +17,6 @@ MINIO_ROOT_USER=shop_images
 MINIO_ROOT_PASSWORD=YandaShopPassword
 
 # Telegram-бот
-BOT_TOKEN='7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U'
-BACKEND_URL='https://shop.yanda.twc1.net'
+BOT_TOKEN=7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U
+BACKEND_URL=https://shop.yanda.twc1.net
 ADMIN_ID=59404714
