--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+    recursive_error_pages on;
+
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -55,9 +57,7 @@ http {
             proxy_set_header   X-Real-IP       $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 
-            # Перехватываем 404 от frontend
             proxy_intercept_errors on;
-            # Если frontend вернул 404, вместо него делаем internal GET на /index.html
             error_page 404 =200 /index.html;
         }
 
