--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,6 +56,11 @@ http {
             proxy_set_header   Host            $host;
             proxy_set_header   X-Real-IP       $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Connection      "";
+
+            # Очищаем заголовки If-Modified, чтобы фронтенд НЕ отвечал 304
+            proxy_set_header   If-Modified-Since "";
+            proxy_set_header   If-None-Match       "";
 
             proxy_intercept_errors on;
             error_page 404 =200 /index.html;
@@ -73,6 +78,11 @@ http {
             proxy_set_header   Host            $host;
             proxy_set_header   X-Real-IP       $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   Connection      "";
+
+            # И здесь тоже сбрасываем условные GET-заголовки
+            proxy_set_header   If-Modified-Since "";
+            proxy_set_header   If-None-Match       "";
         }
     }
 }
