--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,10 @@ COPY . .
 RUN npm run build
 
 FROM nginx:alpine AS runner
+# Копируем собранный фронт
 COPY --from=builder /app/dist /usr/share/nginx/html
+# Подменяем конфиг nginx
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
