--- a/.env
+++ b/.env
@@ -19,4 +19,4 @@ MINIO_ROOT_PASSWORD=YandaShopPassword
 # Telegram-бот
 BOT_TOKEN=7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U
 BACKEND_URL=https://shop.yanda.twc1.net
-ADMIN_ID=59404714
+ADMIN_IDS=59404714,59404714
