--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,8 @@ http {
         listen 443 ssl http2;
         server_name  shop.yanda.twc1.net;
 
+        client_max_body_size 20M;
+
         ssl_certificate     /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/shop.yanda.twc1.net/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
