202 a lot of work on the backend: added init, utils, routes and other files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 ENV PYTHONUNBUFFERED=1
-CMD ["gunicorn", "backend.run:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
+ENV FLASK_APP=app.py
+CMD ["gunicorn", "app:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
