--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.11
-WORKDIR /backend
+WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
+ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
-ENV FLASK_APP=app.py
-CMD ["gunicorn", "app:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
+CMD ["gunicorn", "backend:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
