--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
+ENV FLASK_APP=app.py
 ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
-CMD ["gunicorn", "backend:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
+CMD ["gunicorn", "app:app", "-b", "0.0.0.0:8000", "--workers", "3", "--timeout", "30"]
