202 a lot of work on the backend: added init, utils, routes and other files

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
-gunicorn==21.2.0
-Flask==3.0.3
-flask-cors==4.0.0
-Flask-SQLAlchemy==3.1.0
+gunicorn==23.0.0
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-SQLAlchemy==3.1.1
 psycopg2-binary==2.9.10
-redis==6.1.0
-Flask-Migrate==4.0.4
-Alembic==1.11.1
-minio==7.1.5
-requests==2.31.0
+redis==6.2.0
+Flask-Migrate==4.1.0
+Alembic==1.16.2
+minio==7.2.15
+requests==2.32.4
+tenacity==9.1.2
