--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telegram-mini-app",
+  "name": "yanda-shop-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,15 +8,15 @@
     "serve": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "pinia": "^3.0.2",
-    "serve": "^14.2.0",
-    "vue": "^3.3.0",
+    "axios": "^1.10.0",
+    "pinia": "^3.0.3",
+    "serve": "^14.2.4",
+    "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.0",
-    "sass": "^1.69.5",
-    "vite": "^4.4.11"
+    "@vitejs/plugin-vue": "^6.0.0",
+    "sass": "^1.89.2",
+    "vite": "^7.0.0"
   }
 }
