--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     build: ./backend
     env_file: .env
     volumes:
-      - ./backend:/backend
+      - ./backend:/app
     ports:
       - "8000:8000"
     networks:
