--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@ DB_USER=shop_user
 DB_PASSWORD=YandaShopPassword
 
 # Redis
-REDIS_HOST=redis  # default
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=YandaShopPassword
 
 # MinIO (S3-совместимое хранилище)
 MINIO_HOST=minio:9000
-MINIO_BUCKET=product-images
+MINIO_BUCKET=images
 MINIO_ROOT_USER=shop_images
 MINIO_ROOT_PASSWORD=YandaShopPassword
 
