--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,7 +39,7 @@ http {
 
         # —————————— Проксирование /images/ → MinIO/S3 ——————————
         location /images/ {
-            proxy_pass         http://minio:9000/product-images/;
+            proxy_pass         http://minio:9000/images/;
             proxy_http_version 1.1;
             proxy_set_header   Host            $host;
             proxy_set_header   X-Real-IP       $remote_addr;
