--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,25 @@
-# Frontend
-frontend/node_modules/
-frontend/.env
-frontend/.env.local
-
-# Backend
-backend/__pycache__/
-backend/.env
-*.pyc
-
-# Docker
-Dockerfile
-docker-compose.override.yml
-
-# Общее
-.env
+# OS
 .DS_Store
-.idea/
+Thumbs.db
+
+# Environment
+.env
+
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+
+# Node / Frontend
+node_modules/
+package-lock.json
+dist/
+
+# Logs
+*.log
+
+# IDE / Editor
 .vscode/
+.idea/
+*.suo
+*.user
