--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,27 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      BACKEND_URL:         ${{ secrets.BACKEND_URL }}
+      BOT_TOKEN:           ${{ secrets.BOT_TOKEN }}
+      SECRET_KEY:          ${{ secrets.SECRET_KEY }}
+      JWT_SECRET_KEY:      ${{ secrets.JWT_SECRET_KEY }}
+
+      DB_HOST:             ${{ secrets.DB_HOST }}
+      DB_PORT:             ${{ secrets.DB_PORT }}
+      DB_NAME:             ${{ secrets.DB_NAME }}
+      DB_USER:             ${{ secrets.DB_USER }}
+      DB_PASSWORD:         ${{ secrets.DB_PASSWORD }}
+
+      REDIS_HOST:          ${{ secrets.REDIS_HOST }}
+      REDIS_PORT:          ${{ secrets.REDIS_PORT }}
+      REDIS_PASSWORD:      ${{ secrets.REDIS_PASSWORD }}
+
+      MINIO_HOST:          ${{ secrets.MINIO_HOST }}
+      MINIO_BUCKET:        ${{ secrets.MINIO_BUCKET }}
+      MINIO_ROOT_USER:     ${{ secrets.MINIO_ROOT_USER }}
+      MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_ROOT_PASSWORD }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -14,13 +35,43 @@ jobs:
       - name: Write SSH key and known_hosts
         run: |
           mkdir -p ~/.ssh
-          # Записываем приватный ключ из секрета
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
-
-          # Записываем known_hosts, чтобы явно доверять серверу
           echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
+        shell: bash
+
+      - name: Create .env from Secrets
+        run: |
+          cat > .env <<EOF
+          BACKEND_URL=${BACKEND_URL}
+          BOT_TOKEN=${BOT_TOKEN}
+          SECRET_KEY=${SECRET_KEY}
+          JWT_SECRET_KEY=${JWT_SECRET_KEY}
+          
+          DB_HOST=${DB_HOST}
+          DB_PORT=${DB_PORT}
+          DB_NAME=${DB_NAME}
+          DB_USER=${DB_USER}
+          DB_PASSWORD=${DB_PASSWORD}
+          
+          REDIS_HOST=${REDIS_HOST}
+          REDIS_PORT=${REDIS_PORT}
+          REDIS_PASSWORD=${REDIS_PASSWORD}
+          
+          MINIO_HOST=${MINIO_HOST}
+          MINIO_BUCKET=${MINIO_BUCKET}
+          MINIO_ROOT_USER=${MINIO_ROOT_USER}
+          MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+          EOF
+        shell: bash
+
+      - name: Copy .env to server
+        run: |
+          scp -i ~/.ssh/deploy_key \
+            -o StrictHostKeyChecking=yes \
+            ./.env \
+            "${{ secrets.SERVER_USER }}"@"${{ secrets.SERVER_HOST }}":/root/justice_mafia/.env
         shell: bash
 
       - name: Deploy via SSH
