--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci --prefer-offline --no-audit
+COPY package.json ./
+RUN npm install
 COPY . .
 RUN npm run build
 
@@ -9,7 +9,7 @@ FROM nginx:alpine AS runner
 # Копируем собранный фронт
 COPY --from=builder /app/dist /usr/share/nginx/html
 # Подменяем конфиг nginx
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx-spa.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
