--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,8 +85,10 @@ jobs:
             git fetch --all
             git reset --hard origin/main
             docker-compose down
-            docker builder prune --filter "until=72h" --force
-            docker image prune --filter "until=72h" --force
+            docker container prune --filter "until=24h" --force
+            docker image prune --all --filter "until=24h" --force
+            docker builder prune --all --filter "until=24h" --force
+            docker network prune --filter "until=24h" --force
             certbot renew --noninteractive --standalone --agree-tos
             docker-compose build --no-cache
             docker-compose up -d
