401 new domain yandashop.ru

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,19 +11,19 @@ http {
     # Редирект HTTP → HTTPS
     server {
         listen       80;
-        server_name  shop.yanda.twc1.net;
+        server_name  yandashop.ru;
         return       301 https://$host$request_uri;
     }
 
     # HTTPS-сервер с поддержкой HTTP/2
     server {
         listen 443 ssl http2;
-        server_name  shop.yanda.twc1.net;
+        server_name  yandashop.ru;
 
         client_max_body_size 100M;
 
-        ssl_certificate     /etc/letsencrypt/live/shop.yanda.twc1.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/shop.yanda.twc1.net/privkey.pem;
+        ssl_certificate     /etc/letsencrypt/live/yandashop.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/yandashop.ru/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
 
