--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,25 @@ SECRET_KEY=
 JWT_SECRET_KEY=
 BOT_TOKEN=
 BACKEND_URL=
+
+MAIL_SERVER=
+MAIL_PORT=
+MAIL_USE_TLS=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_DEFAULT_SENDER=
+
+OVERRIDE_HOSTNAME=
+DKIM_SELECTOR=
+POSTMASTER_ADDRESS=
+ENABLE_SPAMASSASSIN=
+ENABLE_CLAMAV=
+ENABLE_AMAVIS=
+ENABLE_POSTGREY=
+ONE_DIR=
+DMS_DEBUG=
+LOG_LEVEL=
+
+SSL_TYPE=
+SSL_CERT_PATH=
+SSL_KEY_PATH=
