402 add webmail service

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,21 @@ http {
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
 
+        # Блокируем доступ к /webmail/data
+        location ~ ^/webmail/data/ {
+            return 404;
+        }
+
+        # Web-mail
+        location ^~ /webmail/ {
+            proxy_pass       http://webmail:80/;
+            proxy_http_version 1.1;
+            proxy_set_header   Host              $host;
+            proxy_set_header   X-Real-IP         $remote_addr;
+            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
+
         # —————————— Проксирование API → Flask-бэкенд ——————————
         location /api/ {
             proxy_pass         http://backend:8000;
