--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,10 @@ Flask-SQLAlchemy==3.1.1
 psycopg2-binary==2.9.10
 redis==6.2.0
 Flask-Migrate==4.1.0
-Alembic==1.16.2
-minio==7.2.15
+Alembic==1.16.4
+minio==7.2.16
 requests==2.32.4
 tenacity==9.1.2
 Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
+email-validator==1.5.1
