--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,16 @@
     "serve": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "pinia": "^3.0.3",
     "serve": "^14.2.4",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "sass": "^1.89.2",
-    "vite": "^7.0.0"
+    "vite": "^7.0.6"
   }
 }
