--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "pinia": "^3.0.3",
     "serve": "^14.2.4",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
