411 change nginx logs conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,9 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
+    access_log    off;
+    error_log     /var/log/nginx/error.log  error;
+
     # Редирект HTTP → HTTPS
     server {
         listen       80;
