--- a/frontend/nginx-spa.conf
+++ b/frontend/nginx-spa.conf
@@ -2,6 +2,8 @@ server {
     listen       80;
     server_name  _;
 
+    access_log  off;
+
     root   /usr/share/nginx/html;
     index  index.html;
 
