416 fix CI/CD config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -174,13 +174,13 @@ jobs:
               docker-compose run --rm backend flask db upgrade
             fi
   
-            if [ "${{ steps.changes.outputs.others }}" = "false" && "${{ steps.changes.outputs.backend }}" = "true" ]; then
+            if [ "${{ steps.changes.outputs.others }}" = "false" ] && [ "${{ steps.changes.outputs.backend }}" = "true" ]; then
               echo "⚙️  Rebuilding backend..."
               docker-compose build backend
               docker-compose up -d --force-recreate backend
             fi
           
-            if [ "${{ steps.changes.outputs.others }}" = "false" && "${{ steps.changes.outputs.frontend }}" = "true" ]; then
+            if [ "${{ steps.changes.outputs.others }}" = "false" ] && [ "${{ steps.changes.outputs.frontend }}" = "true" ]; then
               echo "⚙️  Rebuilding frontend..."
               docker-compose build frontend
               docker-compose up -d --force-recreate frontend
