--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -155,7 +155,7 @@ jobs:
       - name: Deploy via SSH
         run: |
           ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=yes \
-              -l "${{ secrets.SERVER_USER }}" "${{ secrets.SERVER_HOST }}" << 'EOF'
+              -l "${{ secrets.SERVER_USER }}" "${{ secrets.SERVER_HOST }}" <<EOF
             set -euo pipefail
             cd /root/app/yanda_shop
             git fetch --all
@@ -177,13 +177,15 @@ jobs:
             if [ "${{ steps.changes.outputs.others }}" = "false" ] && [ "${{ steps.changes.outputs.backend }}" = "true" ]; then
               echo "⚙️  Rebuilding backend..."
               docker-compose build backend
-              docker-compose up -d --no-deps --force-recreate backend
+              docker-compose rm -sf backend
+              docker-compose up -d backend
             fi
           
             if [ "${{ steps.changes.outputs.others }}" = "false" ] && [ "${{ steps.changes.outputs.frontend }}" = "true" ]; then
               echo "⚙️  Rebuilding frontend..."
               docker-compose build frontend
-              docker-compose up -d --no-deps --force-recreate frontend
+              docker-compose rm -sf frontend
+              docker-compose up -d frontend
             fi
   
             # Показываем статус
